ENEX FSL/snapshotDownload (1)/objects/ResourceAbsence.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>FSL__Approved__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Approved</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Duration_In_Minutes__c</fullName><deprecated>false</deprecated><externalId>false</externalId><formula>IF (ISBLANK(Start), 0, (End - Start)*24*60)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Duration In Minutes</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__EstTravelTimeFrom__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Time From</label><precision>9</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__EstTravelTime__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Time</label><precision>9</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__EstimatedTravelDistanceFrom__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Distance From</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__EstimatedTravelDistanceTo__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Distance To</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Estimated_Travel_Time_From_Source__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Time From Source</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>None</fullName><default>false</default><label>None</label></value><value><fullName>Aerial</fullName><default>false</default><label>Aerial</label></value><value><fullName>SLR</fullName><default>false</default><label>SLR</label></value><value><fullName>Predictive</fullName><default>false</default><label>Predictive</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Time To Source</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>None</fullName><default>false</default><label>None</label></value><value><fullName>Aerial</fullName><default>false</default><label>Aerial</label></value><value><fullName>SLR</fullName><default>false</default><label>SLR</label></value><value><fullName>Predictive</fullName><default>false</default><label>Predictive</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__GanttLabel__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Gantt Label</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>FSL__Gantt_Color__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Gantt Color</label><length>7</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>FSL__InternalSLRGeolocation__c</fullName><deprecated>false</deprecated><displayLocationInDecimal>true</displayLocationInDecimal><externalId>false</externalId><label>Internal SLR Geolocation</label><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Location</type></fields><fields><fullName>FSL__Scheduling_Policy_Used__c</fullName><deleteConstraint>SetNull</deleteConstraint><deprecated>false</deprecated><externalId>false</externalId><label>Scheduling Policy Used</label><referenceTo>FSL__Scheduling_Policy__c</referenceTo><relationshipLabel>Resource Absences</relationshipLabel><relationshipName>Resource_Absences</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>FSL__Break</fullName><active>true</active><label>Break</label></recordTypes><recordTypes><fullName>FSL__Non_Availability</fullName><active>true</active><label>Non Availability</label></recordTypes><sharingModel>ControlledByParent</sharingModel><validationRules><fullName>FSL__Absence_Color_HEX_Format</fullName><active>true</active><errorConditionFormula>(!ISBLANK(FSL__Gantt_Color__c)) &amp;&amp; (NOT(REGEX(FSL__Gantt_Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula><errorDisplayField>FSL__Gantt_Color__c</errorDisplayField><errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage></validationRules><validationRules><fullName>FSL__startShouldPrecedeEnd</fullName><active>true</active><errorConditionFormula>End &lt;=  Start</errorConditionFormula><errorDisplayField>Start</errorDisplayField><errorMessage>The Start Time must be earlier than the End Time.</errorMessage></validationRules></CustomObject>